--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8083
-spring.datasource.url=jdbc:postgresql://localhost:5432/ct_db2
+spring.datasource.url=jdbc:postgresql://localhost:5432/ct_db
 spring.datasource.username=postgres
 spring.datasource.password=password_123
 spring.jpa.show-sql=true
