--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8083
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/ct_db10
+spring.datasource.url=jdbc:postgresql://localhost:5432/ct_db
 
 spring.datasource.username=postgres
 spring.datasource.password=password_123
