--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,9 @@
 	</parent>
 	<groupId>com.ct</groupId>
 	<artifactId>patient</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>patient-service</name>
+	<packaging>jar</packaging>
 	<description>Patient micro service</description>
 	<properties>
 		<java.version>1.8</java.version>
