--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
+server.port=8083
 
-#server.port=8083
-#
-#spring.datasource.url=jdbc:postgresql://localhost:5432/ct_db
-#
-#spring.datasource.username=postgres
-#spring.datasource.password=password_123
-#spring.jpa.show-sql=true
-#
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=update
+spring.application.name=PATIENT-SERVICE
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/ct_db
+spring.datasource.username=postgres
+spring.datasource.password=password_123
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+eureka.instance.hostname=localhost
