--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,2 +1,2 @@
-spring.cloud.config.name=patient-service
-spring.cloud.config.uri=http://localhost:8088
+#spring.cloud.config.name=patient-service
+#spring.cloud.config.uri=http://localhost:8088
